// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification error is rendered correctly 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa bHEuh"
      color="#e53935"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-1 sc-bwzfXH QPxvA"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`Notification info is rendered correctly 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa jxCSlW"
      color="#1e88e5"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-28 sc-bwzfXH QPxvA"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`Notification success is rendered correctly 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa ffnKSt"
      color="#43a047"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-10 sc-bwzfXH QPxvA"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`Notification warning is rendered correctly 1`] = `
<body>
  <div>
    <div
      class="sc-bdVaJa hrQCMv"
      color="#ffb300"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-19 sc-bwzfXH QPxvA"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
        />
      </svg>
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;
